--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=suplanteu-vos
 oauth2.scope.everything.read=llegiu dades en el vostre nom
 oauth2.scope.everything.write=creeu/actualitzeu/suprimiu dades en el vostre nom
 object=Objecte
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Dades de l'objecte
 object-definition-id=ID de l'objecte
 object-definition-table-name=Nom de la taula
@@ -6139,12 +6157,6 @@ occurrences=Ocurrències
 october=Octubre
 old-friendly-urls=Només URL amigables
 old-role-name-is-a-required-system-role=El nom del rol anterior és un rol requerit pel sistema.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=S'ha afegit una entrada.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=S'ha suprimit una entrada.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=S'ha actualitzat una entrada.
 on-assignment=En assignar
 on-demand-admin-configuration-name=Administrador segons demanda
 on-entry=En entrar
@@ -10221,8 +10233,6 @@ web-plugins=Connectors web
 web-url=URL del web
 webdav-help=Es poden gestionar els arxius i les carpetes des de l'explorador d'arxius del sistema operatiu del vostre ordinador. <a href="{0}" target="_blank">Llegeix més.</a>
 webdav-windows-help=Es poden gestionar els arxius i les carpetes directament des de l'explorador de fitxers del sistema operatiu del vostre ordinador. Abans d'accedir-hi des de Windows, assegureu-vos que heu instal·lat el <a href="{0}" target="_blank">pedaç</a> des de Microsoft. <a href="{1}" target="_blank">Llegeix més.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=La setmana comença en
 week-view=Vista setmanal
 weekday-short-friday=DV
