--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=udgive dig for at være en af de (Automatic Translation)
 oauth2.scope.everything.read=læse data på dine vegne (Automatic Translation)
 oauth2.scope.everything.write=oprette/opdatere/slette data på dine vegne (Automatic Translation)
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Occurrences (Automatic Copy)
 october=Oktober (Automatic Translation)
 old-friendly-urls=Gamle venlige URL-adresser (Automatic Translation)
 old-role-name-is-a-required-system-role=Det gamle rollenavn er en nødvendig systemrolle. (Automatic Translation)
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=Ved tildeling (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=Ved indtastning (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=Webudvidelser
 web-url=URL-adresse til websted (Automatic Translation)
 webdav-help=Filer og mapper kan administreres direkte fra filstyringen på din computer. <a href="{0}" target="_blank">Læs mere.</a>
 webdav-windows-help=Filer og mapper kan administreres direkte fra filstyringen på din computer. Før tilgang fra Windows, sørg venligst for at du har installeret <a href="{0}" target="_blank">denne opdatering</a> fra Microsoft. <a href="{1}" target="_blank">Læs mere.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Ugen starter den (Automatic Translation)
 week-view=Ugevisning (Automatic Translation)
 weekday-short-friday=F (Automatic Copy)
