--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=να σε υποδυόσουν (Automatic Translation)
 oauth2.scope.everything.read=διαβάστε δεδομένα για λογαριασμό σας (Automatic Translation)
 oauth2.scope.everything.write=Δημιουργία/ενημέρωση/διαγραφή δεδομένων για λογαριασμό σας (Automatic Translation)
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Εμφανίσεις (Automatic Translation)
 october=Οκτώβριος (Automatic Translation)
 old-friendly-urls=Παλιές φιλικές διευθύνσεις URL (Automatic Translation)
 old-role-name-is-a-required-system-role=Το παλαιό όνομα ρόλου είναι απαραίτητο για το σύστημα.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=Κατά την ανάθεση (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=Κατά την είσοδο (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=Plugins τύπου Web
 web-url=Διεύθυνση URL ιστού (Automatic Translation)
 webdav-help=Μπορείτε να διαχειρίζεστε απευθείας αρχεία και φακέλους από τον περιηγητή αρχείων του υπολογιστή σας. <a href="{0}" target="_blank">Διαβάστε περισσότερα.</a>
 webdav-windows-help=Μπορείτε να διαχειρίζεστε απευθείας αρχεία και φακέλους από τον περιηγητή αρχείων του υπολογιστή σας. Πριν να προσπελάσετε αυτήν τη δυνατότητα από τα Windows, παρακαλώ βεβαιωθείτε ότι έχετε εγκαταστήσει την <a href="{0}" target="_blank">ενημέρωση</a> από τη Microsoft. <a href="{1}" target="_blank">Διαβάστε περισσότερα.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Η εβδομάδα ξεκινά στις (Automatic Translation)
 week-view=Προβολή εβδομάδας (Automatic Translation)
 weekday-short-friday=F (Automatic Copy)
