--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=आप का रूप धारण करना (Autom
 oauth2.scope.everything.read=अपनी ओर से डेटा पढ़ें (Automatic Translation)
 oauth2.scope.everything.write=अपनी ओर से डेटा बनाएं/अपडेट/डिलीट करें (Automatic Translation)
 object=वस्तु
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=आवृत्तियों (Automatic Translation)
 october=अक्टूबर
 old-friendly-urls=पुराने दोस्ताना यूआरएल (Automatic Translation)
 old-role-name-is-a-required-system-role=पुरानी भूमिका का नाम एक आवश्यक प्रणाली की भूमिका है। (Automatic Translation)
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=एक प्रविष्टि जोड़ी गई।
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=एक प्रविष्टि हटा दी गई।
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=एक प्रविष्टि अपडेट की गई।
 on-assignment=असाइनमेंट पर (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=प्रवेश पर (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=वेब Plugins
 web-url=वेब यूआरएल (Automatic Translation)
 webdav-help=फ़ाइलें और फ़ोल्डर्स अपने डेस्कटॉप ऑपरेटिंग सिस्टम की फ़ाइल Explorer से सीधे manage कर सकते हैं| <a href="{0}" target="_blank">Read more.</a>
 webdav-windows-help=फ़ाइलें और फ़ोल्डर्स अपने डेस्कटॉप ऑपरेटिंग सिस्टम की फ़ाइल Explorer से सीधे manage कर सकते हैं| Before accessing from Windows, please ensure you have installed the <a href="{0}" target="_blank">patch</a> from Microsoft. <a href="{1}" target="_blank">Read more.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=सप्ताह शुरू होता है
 week-view=सप्ताह का दृश्य
 weekday-short-friday=F (Automatic Copy)
