--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=impersonare voi (Automatic Translation)
 oauth2.scope.everything.read=leggere i dati per tuo conto (Automatic Translation)
 oauth2.scope.everything.write=creare/aggiornare/eliminare dati per conto dell'utente (Automatic Translation)
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Occorrenze (Automatic Translation)
 october=Ottobre
 old-friendly-urls=Vecchi URL amichevoli (Automatic Translation)
 old-role-name-is-a-required-system-role=Il vecchio nome di ruolo è un ruolo richiesto dal sistema.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=All'assegnazione (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=All'ingresso (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=Plugin Web
 web-url=Web URL (Automatic Translation)
 webdav-help=Puoi accedere ai file e alle cartelle direttamente con esplora risorse del tuo sistema operativo. <a href="{0}" target="_blank">Maggiori dettagli.</a>
 webdav-windows-help=File e cartelle possono essere gestiti direttamente con esplora risorse del tuo sistema operativo. Prima di accedere da Windows, per favore assicurati di aver installato la <a href="{0}" target="_blank">patch</a> di Microsoft. <a href="{1}" target="_blank">Maggiori dettagli.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=La Settimana Inizia Il
 week-view=Visualizzazione Settimanale
 weekday-short-friday=F (Automatic Copy)
