--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=代理ログイン
 oauth2.scope.everything.read=データ読み込みを許可
 oauth2.scope.everything.write=データの作成/更新/削除を許可
 object=オブジェクト
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=オブジェクトデータ
 object-definition-id=オブジェクト ID
 object-definition-table-name=テーブル名
@@ -6139,12 +6157,6 @@ occurrences=発生箇所
 october=10月
 old-friendly-urls=古いフレンドリURL
 old-role-name-is-a-required-system-role=変更前のロール名は標準ロールです。変更できません。
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=エントリーが追加されました。
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=エントリーが削除されました。
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=エントリーが更新されました。
 on-assignment=割り当て時
 on-demand-admin-configuration-name=オンデマンド管理
 on-entry=処理開始時
@@ -10221,8 +10233,6 @@ web-plugins=Webプラグイン
 web-url=Web URL
 webdav-help=デスクトップのファイルエクスプローラからファイルおよびフォルダを直接管理できます。<a href="{0}" target="_blank">詳細はこちら</a>
 webdav-windows-help=エクスプローラからファイルおよびフォルダを管理できます。Windowsから利用する前に、マイクロソフトから提供されている<a href="{0}" target="_blank">パッチ</a>を適用してください。（<a href="{1}" target="_blank">詳細を参照</a>）
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=週の開始曜日
 week-view=週表示
 weekday-short-friday=金
