--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=zich uitgeven voor u
 oauth2.scope.everything.read=gegevens lezen in uw naam
 oauth2.scope.everything.write=gegevens maken/bijwerken/verwijderen in uw naam
 object=Object
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Objectgegevens
 object-definition-id=Object-ID
 object-definition-table-name=Tabelnaam
@@ -6139,12 +6157,6 @@ occurrences=Voorvallen
 october=Oktober
 old-friendly-urls=Oude beschrijvende URL's
 old-role-name-is-a-required-system-role=De oude functienaam is een vereiste systeemfunctie.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Er werd invoer toegevoegd.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=Er werd invoer verwijderd.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=Er werd invoer bijgewerkt.
 on-assignment=Bij Toewijzing
 on-demand-admin-configuration-name=Beheerder op aanvraag
 on-entry=Bij het Binnenkomen
@@ -10221,8 +10233,6 @@ web-plugins=Webplug-ins
 web-url=Web-URL
 webdav-help=Bestanden en mappen zijn direct te beheren vanuit de bestandsverkenner van het besturingssysteem. <a href="{0}" target="_blank">Meer lezen.</a>
 webdav-windows-help=Bestanden en mappen zijn direct te beheren vanuit de bestandsverkenner van het besturingssysteem. Installeer de volgende <a href="{0}" target="_blank">patch</a> van Microsoft voordat u toegang zoekt vanuit Windows.<a href="{1}" target="_blank">Meer lezen.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=De week begint op
 week-view=Week overzicht
 weekday-short-friday=V
