--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=personificar você
 oauth2.scope.everything.read=ler dados em seu nome
 oauth2.scope.everything.write=criar/atualizar/excluir dados em seu nome
 object=Objeto
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Dados do objeto
 object-definition-id=ID do objeto
 object-definition-table-name=Nome da tabela
@@ -6139,12 +6157,6 @@ occurrences=Ocorrências
 october=Outubro
 old-friendly-urls=URLs amigáveis antiga
 old-role-name-is-a-required-system-role=O nome do papel antigo é um papel de sistema requerido.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Uma entrada foi adicionada.
-on-after-delete=Ativado após exclusão
-on-after-delete-help=Uma entrada foi excluída.
-on-after-update=Ativado após atualização
-on-after-update-help=Uma entrada foi atualizada.
 on-assignment=Ao atribuir
 on-demand-admin-configuration-name=Admin sob demanda
 on-entry=Ao entrar
@@ -10221,8 +10233,6 @@ web-plugins=Plugins Web
 web-url=URL da Web
 webdav-help=Arquivos e pastas podem ser gerenciadas diretamente a partir do gerenciador de arquivos do seu sistema operacional. <a href="{0}" target="_blank">Leia mais.</a>
 webdav-windows-help=Arquivos e pastas podem ser gerenciadas diretamente a partir do gerenciador de arquivos do seu sistema operacional. Antes de acessar a partir do Windows, por favor instale o <a href="{0}" target="_blank">patch</a> da Microsoft. <a href="{1}" target="_blank">Leia mais.</a>
-webhook=Webhook
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=A semana começa
 week-view=Visualização de Semana
 weekday-short-friday=S
