--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=நீங்கள் வேறொரு நபராக
 oauth2.scope.everything.read=உங்கள் சார்பாக டேட்டாவைப் படிக்கவும்
 oauth2.scope.everything.write=உங்கள் சார்பாக டேட்டாவை உருவாக்க / புதுப்பிக்கவும் / நீக்கவும்
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Occurrences (Automatic Copy)
 october=அக்டோபர்
 old-friendly-urls=Old Friendly URLs (Automatic Copy)
 old-role-name-is-a-required-system-role=பழைய role பெயர் ஒரு தேவையான system role ஆகும்.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=On Assignment (Automatic Copy)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=On Entry (Automatic Copy)
@@ -10221,8 +10233,6 @@ web-plugins=வெப் ப்ளகின்ஸ்
 web-url=வெப் URL
 webdav-help=நேரடியாக உங்கள் desktop operating system, file explorer இருந்து கோப்புகள் மற்றும் கோப்புறைகளை சமாளிக்க முடியும். <a href="{0}" target="_blank">மேலும் படிக்க.</a>
 webdav-windows-help=Files and folders can be managed directly from the file explorer of your desktop operating system. Before accessing from Windows, please ensure you have installed the <a href="{0}" target="_blank">patch</a> from Microsoft. <a href="{1}" target="_blank">Read more.</a> (Automatic Copy)
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=வாரம் தொடங்குகிறது
 week-view=வாரத்தின் நிகழ்வுகள்
 weekday-short-friday=F (Automatic Copy)
