--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=انتحال شخصيتك
 oauth2.scope.everything.read=قراءة البيانات نيابة عنك
 oauth2.scope.everything.write=إنشاء/تحديث/حذف البيانات نيابة عنك
 object=كائن
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=بيانات الكائن
 object-definition-id=معرف الكائن
 object-definition-table-name=اسم الجدول
@@ -6139,12 +6157,6 @@ occurrences=مرات الحدوث
 october=أكتوبر
 old-friendly-urls=عناوين URL ودية فقط
 old-role-name-is-a-required-system-role=إسم الدور القديم هو إسم لدور مطلوب من قبل النظام.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=تمت إضافة إدخال.
-on-after-delete=بعد الحذف
-on-after-delete-help=تم حذف إدخال.
-on-after-update=بعد التحديث
-on-after-update-help=تم تحديث إدخال.
 on-assignment=على التعيين
 on-demand-admin-configuration-name=إدارة حسب الطلب
 on-entry=على الإدخال
@@ -10221,8 +10233,6 @@ web-plugins=إضافات الويب
 web-url=URL للويب
 webdav-help=يمكن إدارة الملفات والمجلدات من مستكشف الملفات مباشرة من سطح المكتب. <a href="{0}" target="_blank">لقراءة المزيد.</a>
 webdav-windows-help=يمكن إدارة الملفات والمجلدات من مستكشف الملفات مباشرة من سطح المكتب. قبل الوصول من Windows، يرجى التأكد من تثبيت <a href="{0}" target="_blank">هذا التصحيح</a> من Microsoft. <a href="{1}" target="_blank">لقراءة المزيد.</a>
-webhook=Webhook
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=الأسبوع يبدأ في
 week-view=عرض الأسبوع
 weekday-short-friday=جمعة
