--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=vydávat se za vás (Automatic Translation)
 oauth2.scope.everything.read=čtení údajů vaším jménem (Automatic Translation)
 oauth2.scope.everything.write=vytvořit/aktualizovat/odstranit data vaším jménem (Automatic Translation)
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=výskyty (Automatic Translation)
 october=Říjen (Automatic Translation)
 old-friendly-urls=Staré přátelské adresy URL (Automatic Translation)
 old-role-name-is-a-required-system-role=Původní název role je požadovaný název systémové role.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=Při přiřazení (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=Při vstupu (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=Zásuvné moduly pro web
 web-url=Webová adresa URL (Automatic Translation)
 webdav-help=Soubory a složky mohou být spravovány přes Průzkumník souborů přímo z vašeho osobního počítače. <a href="{0}" target="_blank">Zjistit více.</a>
 webdav-windows-help=Soubory a složky mohou být spravovány přes Průzkumník souborů přímo z vašeho osobního počítače. Pokud budete mít s připojením webovské složky potíže, kontaktujte správce sítě. <br/>Ve starších verzích Windows se můžete také shledat s obtížemi, které je možné napravit <a href="{0}" target="_blank">záplatou</a> od firmy Microsoft. <a href="{1}" target="_blank">Zjistit více.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Týden začíná
 week-view=Zobrazení týdne (Automatic Translation)
 weekday-short-friday=F (Automatic Copy)
