--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=sich als Sie ausgeben
 oauth2.scope.everything.read=Daten in Ihrem Namen lesen
 oauth2.scope.everything.write=Daten in Ihrem Namen erstellen/aktualisieren/löschen
 object=Objekt
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Objektdaten
 object-definition-id=Objekt-ID
 object-definition-table-name=Tabellenname
@@ -6139,12 +6157,6 @@ occurrences=Ereignisse
 october=Oktober
 old-friendly-urls=Alte benutzerfreundliche URLs
 old-role-name-is-a-required-system-role=Der alte Rollenname ist eine benötigte Systemrolle.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Ein Eintrag wurde hinzugefügt.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=Ein Eintrag wurde gelöscht.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=Ein Eintrag wurde aktualisiert.
 on-assignment=Bei Zuweisung
 on-demand-admin-configuration-name=On-Demand-Admin
 on-entry=Bei Eingang
@@ -10221,8 +10233,6 @@ web-plugins=Web-Plugins
 web-url=Web-URL
 webdav-help=Dateien und Verzeichnisse können direkt über den Datei-Explorer - Ihres Betriebssystems - verwaltet werden. <a href="{0}" target="_blank">Mehr dazu</a>
 webdav-windows-help=Dateien und Verzeichnisse können direkt über den Datei-Explorer - Ihres Betriebssystems - verwaltet werden. Bevor Sie auf Windows zugreifen, sollten Sie sicherstellen, dass Sie dieses <a href="{0}" target="_blank">Update</a> von Microsoft installiert haben. <a href="{1}" target="_blank">Mehr dazu</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Woche beginnt am
 week-view=Wochenansicht
 weekday-short-friday=F
