--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=suplantar a su usuario
 oauth2.scope.everything.read=leer datos en su nombre
 oauth2.scope.everything.write=crear, actualizar y eliminar datos en su nombre
 object=Objeto
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Datos del objeto
 object-definition-id=Identificador de objeto
 object-definition-table-name=Nombre de la tabla
@@ -6139,12 +6157,6 @@ occurrences=Coincidencias
 october=Octubre
 old-friendly-urls=URL descriptivas anteriores
 old-role-name-is-a-required-system-role=El rol seleccionado es un rol requerido del sistema.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Se ha añadido una entrada.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=Se ha eliminado una entrada.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=Se ha actualizado una entrada.
 on-assignment=Al asignar
 on-demand-admin-configuration-name=Administrador a petición
 on-entry=Al realizar una entrada
@@ -10221,8 +10233,6 @@ web-plugins=Plugins de tipo web
 web-url=URL de web
 webdav-help=Las carpetas y archivos pueden ser gestionados directamente desde el explorador de ficheros del escritorio de tu sistema operativo. <a href="{0}" target="_blank">Más información.</a>
 webdav-windows-help=Las carpetas y archivos pueden ser gestionados directamente desde el explorador de ficheros del escritorio de tu sistema operativo. Antes de acceder desde Windows, compruebe que tiene instalado el <a href="{0}" target="_blank">parche</a> de Microsoft. <a href="{1}" target="_blank">Más información.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=La semana comienza el
 week-view=Vista semanal
 weekday-short-friday=v
