--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=جعل هویت شما
 oauth2.scope.everything.read=اطلاعات را از طرف شما بخوانید
 oauth2.scope.everything.write=ایجاد / به روز رسانی / حذف اطلاعات از طرف شما
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=رخداد (Automatic Translation)
 october=اکتبر
 old-friendly-urls=قدیمی دوستانه URLs (Automatic Translation)
 old-role-name-is-a-required-system-role=نام قدیمی نقش یک نام سیستمی لازم است
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=در واگذاری (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=در ورود (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=پلاگین های وب
 web-url=آدرس اینترنتی
 webdav-help=شما می‌توانید به فایل‌ها و پوشه‌های این بخش از طریق بخش مدیریت فایل‌های سیستم خود دسترسی داشته باشید.
 webdav-windows-help=فایل‌ها و پوشه‌ها به صورت مستقیم با استفاده از جستجوگر فایل سیستم عامل می‌توانند مدیریت شوند. قبل از دسترسی لطفا مطمئن شوید که <a href="{0}" target="_blank">patch</a> از میکروسافت نصب شده باشد. <a href="{1}" target="_blank">بیشتر بخوانید.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=شروع هفته از
 week-view=مشاهده هفته
 weekday-short-friday=F (Automatic Copy)
