--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=tekeydy itseksesi
 oauth2.scope.everything.read=lue tiedot puolestasi
 oauth2.scope.everything.write=luo/päivitä/poista tietoja omasta puolestasi
 object=Objekti
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Objektin tiedot
 object-definition-id=Objektin tunnus
 object-definition-table-name=Taulukon nimi
@@ -6139,12 +6157,6 @@ occurrences=Esiintymät
 october=Lokakuu
 old-friendly-urls=Vanhat Ystävälliset URL:t
 old-role-name-is-a-required-system-role=Vanha roolinimi on välttämätön järjestelmärooli.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Merkintä lisättiin.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=Merkintä poistettiin.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=Merkintä päivitettiin.
 on-assignment=Nimettäessä
 on-demand-admin-configuration-name=On-demand-pääkäyttäjä
 on-entry=Tultaessa
@@ -10221,8 +10233,6 @@ web-plugins=Web pluginit
 web-url=Verkko-URL
 webdav-help=Tiedostot ja hakemistot voidaan hallita suoraan käyttöjärjestelmäsi tiedostojen hallinnasta. <a href="{0}" target="_blank">Lue lisää.</a>
 webdav-windows-help=Tiedostot ja hakemistot voidaan hallita suoraan käyttöjärjestelmäsi tiedostojen hallinnasta. Ennen otat yhteyttä Windows:sta, varmista että olet asentanut seuraavan <a href="{0}" target="_blank">korjaustiedoston</a> Microsoftilta. <a href="{1}" target="_blank">Lue lisää.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Viikkoa alkaa
 week-view=Viikkonäkymä
 weekday-short-friday=P
