--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=usurper votre identité
 oauth2.scope.everything.read=lire les données de votre part
 oauth2.scope.everything.write=créer/mettre à jour/supprimer les données en votre nom
 object=Objet
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Données de l'objet
 object-definition-id=ID de l'objet
 object-definition-table-name=Nom de la table
@@ -6139,12 +6157,6 @@ occurrences=Occurrences
 october=Octobre
 old-friendly-urls=Vieilles URL simplifiées
 old-role-name-is-a-required-system-role=L'ancien nom de rôle est un rôle réservé du système.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Une entrée a été ajoutée.
-on-after-delete=Après suppression
-on-after-delete-help=Une entrée a été supprimée.
-on-after-update=Après modification
-on-after-update-help=Une entrée a été mise à jour.
 on-assignment=Lors d'une Affectation
 on-demand-admin-configuration-name=Administrateur à la demande
 on-entry=Lors d'une Entrée
@@ -10221,8 +10233,6 @@ web-plugins=Web plugin
 web-url=URL web
 webdav-help=Les fichiers et les dossiers peuvent être gérés directement depuis l'explorateur de fichiers de votre système d'exploitation. <a href="{0}" target="_blank">En savoir plus.</a>
 webdav-windows-help=Les fichiers et les dossiers peuvent être gérés directement depuis l'explorateur de fichiers de votre système d'exploitation. Avant d'y accéder depuis Windows, merci de vérifier que vous avez bien installé le <a href="{0}" target="_blank">patch</a> de Microsoft. <a href="{1}" target="_blank">En savoir plus.</a>
-webhook=Webhook
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=La semaine commence le
 week-view=Vue semaine
 weekday-short-friday=V
