--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=az ön megszemélyesítése
 oauth2.scope.everything.read=adatok olvasása az ön nevében
 oauth2.scope.everything.write=adatok létrehozása/frissítése/törlése az ön nevében
 object=Objektum
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Objektum adatai
 object-definition-id=Objektumazonosító
 object-definition-table-name=Táblázat neve
@@ -6139,12 +6157,6 @@ occurrences=Előfordulások
 october=Október
 old-friendly-urls=Régi böngészőbarát URL-címek
 old-role-name-is-a-required-system-role=A régi szerepkörnév szükséges rendszerszerepkör.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Hozzáadott egy bejegyzést.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=Törölt egy bejegyzést.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=Frissített egy bejegyzést.
 on-assignment=Hozzárendelésnél
 on-demand-admin-configuration-name=Igény szerinti admin
 on-entry=Bejegyzésnél
@@ -10221,8 +10233,6 @@ web-plugins=Web pluginek
 web-url=Web URL-címe
 webdav-help=A fájlok és mappák kezelhetők közvetlenül az operációsrendszered fájlkezelőjével. <a href="{0}" target="_blank">Bővebben</a>
 webdav-windows-help=A fájlok és mappák kezelhetők közvetlenül az operációsrendszered fájlkezelőjével. Windows alatt, használat előtt győződj meg róla, hogy a Microsoft által kiadott <a href="{0}" target="_blank">patch</a> telepítve van. <a href="{1}" target="_blank">Bővebben</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=A hét kezdőnapja
 week-view=Heti nézet
 weekday-short-friday=P
