--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=opptre som deg
 oauth2.scope.everything.read=lese data på vegne av deg
 oauth2.scope.everything.write=opprette/oppdatere/slette data på vegne av deg
 object=Objekt
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Forekomster (Automatic Translation)
 october=Oktober
 old-friendly-urls=Gamle vennlige nettadresser (Automatic Translation)
 old-role-name-is-a-required-system-role=Det gamle rollenavnet er en påkrevd systemrolle.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=Et innlegg ble opprettet.
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=Et innlegg ble slettet.
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=Et innlegg ble oppdatert.
 on-assignment=Ved tildeling (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=Ved oppføring (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=Web-tillegg
 web-url=Web-URL
 webdav-help=Filer og mapper kan håndteres direkte fra filutforskeren i ditt operativsystem. <a href="{0}" target="_blank">Les mer.</a>
 webdav-windows-help=Filer og mapper kan håndteres direkte fra filutforskeren i ditt operativsystem. Før du aksesserer fra Windows, sjekk at du har installert <a href="{0}" target="_blank">patch</a> fra Microsoft. <a href="{1}" target="_blank">Les mer.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Uken start på
 week-view=Ukesvisning
 weekday-short-friday=F (Automatic Copy)
