--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=să te imite (Automatic Translation)
 oauth2.scope.everything.read=citiți date în numele dvs. (Automatic Translation)
 oauth2.scope.everything.write=creați/actualizați/ștergeți date în numele dvs. (Automatic Translation)
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Apariţii (Automatic Translation)
 october=Octombrie (Automatic Translation)
 old-friendly-urls=URL-uri vechi prietenoase (Automatic Translation)
 old-role-name-is-a-required-system-role=Rol Vechi este un rol de sistem necesar.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=În misiune (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=La intrare (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=Pugin-uri Web
 web-url=Web URL (Automatic Translation)
 webdav-help=Fisierele si directoarele pot fi gestionate direct din modulul vizual de explorare de pe sistemul de operare a calculatorului. <a href="{0}" target="_blank">Citeste mai mult.</a>
 webdav-windows-help=Fisierele si directoarele pot fi gestionate direct din modulul vizual de explorare de pe sistemul de operare a calculatorului. Inainte de a accesa din Windows, te rog asigura-te ca ai instalat <a href="{0}" target="_blank">patch</a> de la Microsoft. <a href="{1}" target="_blank">Citeste mai mult.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Săptămâna începe pe (Automatic Translation)
 week-view=Vizualizare săptămână (Automatic Translation)
 weekday-short-friday=F (Automatic Copy)
