--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=impersonate you (Automatic Copy)
 oauth2.scope.everything.read=read data on your behalf (Automatic Copy)
 oauth2.scope.everything.write=create/update/delete data on your behalf (Automatic Copy)
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=Occurrences (Automatic Copy)
 october=October (Automatic Copy)
 old-friendly-urls=Old Friendly URLs (Automatic Copy)
 old-role-name-is-a-required-system-role=Старо име улоге захтева системску улогу.
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=On Assignment (Automatic Copy)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=On Entry (Automatic Copy)
@@ -10221,8 +10233,6 @@ web-plugins=Веб Додаци
 web-url=Web URL (Automatic Copy)
 webdav-help=Датотекама и фолдерима може се директно управљати из Фајл Екплорера са вашег десктоп оперативног система.<a href="{0}" target="_blank">Види више.</a>
 webdav-windows-help=Датотекама и директоријумима се може директно управљати из Фајл Екплорера са вашег десктоп оперативног система. Пре него што приступите из Виндовса, молимо проверите да ли сте инсталирали <a href="{0}" target="_blank">patch</a> од Microsoft. <a href="{1}" target="_blank">Види више.</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=Week Starts On (Automatic Copy)
 week-view=Week View (Automatic Copy)
 weekday-short-friday=F (Automatic Copy)
