--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=สวมบทบาทเป็นคุณ
 oauth2.scope.everything.read=อ่านข้อมูลในนามของคุณ
 oauth2.scope.everything.write=สร้าง / อัปเดต / ลบข้อมูลในนามของคุณ
 object=Object (Automatic Copy)
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=Object Data (Automatic Copy)
 object-definition-id=Object ID (Automatic Copy)
 object-definition-table-name=Table Name (Automatic Copy)
@@ -6139,12 +6157,6 @@ occurrences=เหตุการณ์ (Automatic Translation)
 october=ตุลาคม
 old-friendly-urls=URL ที่จําง่ายเก่า (Automatic Translation)
 old-role-name-is-a-required-system-role=ชื่อบทบาทเก่าเป็นบทบาทระบบที่ต้องการ (Automatic Translation)
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=An entry was added. (Automatic Copy)
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=An entry was deleted. (Automatic Copy)
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=An entry was updated. (Automatic Copy)
 on-assignment=เมื่อกําหนด (Automatic Translation)
 on-demand-admin-configuration-name=On-Demand Admin (Automatic Copy)
 on-entry=เมื่อป้อนข้อมูล (Automatic Translation)
@@ -10221,8 +10233,6 @@ web-plugins=ปลั๊กอินเว็บ (Automatic Translation)
 web-url=URL ของเว็บ (Automatic Translation)
 webdav-help=ไฟล์และโฟลเดอร์สามารถจัดการได้โดยตรงจากตัวสำรวจไฟล์ของระบบปฏิบัติการเดสก์ท็อปของคุณ <a href="{0}" target="_blank"> อ่านเพิ่มเติม </a>
 webdav-windows-help=ไฟล์และโฟลเดอร์สามารถจัดการได้โดยตรงจากตัวสำรวจไฟล์ของระบบปฏิบัติการเดสก์ท็อปของคุณ ก่อนที่จะเข้าถึงจาก Windows โปรดตรวจสอบให้แน่ใจว่าคุณได้ติดตั้ง <a href="{0}" target="_blank"> แพทช์ </a> จาก Microsoft <a href="{1}" target="_blank"> อ่านเพิ่มเติม </a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=เริ่มต้นสัปดาห์ในวัน
 week-view=มุมมองรายสัปดาห์
 weekday-short-friday=F (Automatic Copy)
