--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=模拟您
 oauth2.scope.everything.read=代表您读取数据
 oauth2.scope.everything.write=代表您创建/更新/删除数据
 object=对象
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=对象数据
 object-definition-id=对象 ID
 object-definition-table-name=表名
@@ -6139,12 +6157,6 @@ occurrences=匹配项
 october=十月
 old-friendly-urls=旧的友好 URL
 old-role-name-is-a-required-system-role=原角色名称是一个必需的系统角色。
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=已添加条目。
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=已删除条目。
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=已更新条目。
 on-assignment=分配时
 on-demand-admin-configuration-name=按需管理员
 on-entry=进入时
@@ -10221,8 +10233,6 @@ web-plugins=Web插件
 web-url=Web URL
 webdav-help=文件和文件夹可以用您桌面操作系统的文件浏览器直接管理。<a href="{0}" target="_blank">阅读更多。</a>
 webdav-windows-help=文件和文件夹可以用您本地操作系统的文件浏览器直接管理。在使用Windows访问以前, 请确认您已经安装过微软<a href="{0}" target="_blank">补丁</a>。<a href="{1}" target="_blank">阅读更多。</a>
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=周开始于
 week-view=周视图
 weekday-short-friday=F
