--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -6122,6 +6122,24 @@ oauth2.scope.everything=模擬您
 oauth2.scope.everything.read=代表您讀取資料
 oauth2.scope.everything.write=幫你建立/修改/刪除資料。
 object=物件
+object-action-executor-help[webhook]=Trigger a webhook with a payload. (Automatic Copy)
+object-action-executor[webhook]=Webhook (Automatic Copy)
+object-action-trigger-help[liferay/commerce_base_price_list]=The base price list was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_order_status]=The order status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_payment_status]=The payment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_shipment_status]=The shipment status was updated. (Automatic Copy)
+object-action-trigger-help[liferay/commerce_subscription_status]=The subscription status was updated. (Automatic Copy)
+object-action-trigger-help[onAfterAdd]=An entry was added. (Automatic Copy)
+object-action-trigger-help[onAfterDelete]=An entry was deleted. (Automatic Copy)
+object-action-trigger-help[onAfterUpdate]=An entry was updated. (Automatic Copy)
+object-action-trigger[liferay/commerce_base_price_list]=On Base Price List Update (Automatic Copy)
+object-action-trigger[liferay/commerce_order_status]=On Order Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_payment_status]=On Payment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_shipment_status]=On Shipment Status Update (Automatic Copy)
+object-action-trigger[liferay/commerce_subscription_status]=On Subscription Status Update (Automatic Copy)
+object-action-trigger[onAfterAdd]=On After Add (Automatic Copy)
+object-action-trigger[onAfterDelete]=On After Delete (Automatic Copy)
+object-action-trigger[onAfterUpdate]=On After Update (Automatic Copy)
 object-definition-data=物件資料
 object-definition-id=物件 ID
 object-definition-table-name=資料表名稱
@@ -6139,12 +6157,6 @@ occurrences=出現次數
 october=十月
 old-friendly-urls=舊的友善網址
 old-role-name-is-a-required-system-role=舊角色名稱是一個必需的系統角色。
-on-after-add=On After Add (Automatic Copy)
-on-after-add-help=已新增此條目。
-on-after-delete=On After Delete (Automatic Copy)
-on-after-delete-help=已刪除此條目。
-on-after-update=On After Update (Automatic Copy)
-on-after-update-help=已更新此條目。
 on-assignment=分派時
 on-demand-admin-configuration-name=按需管理
 on-entry=進入時
@@ -10221,8 +10233,6 @@ web-plugins=網頁插件
 web-url=Web URL
 webdav-help=檔案與資料夾能被直接管理從您的桌面作業系統的檔案瀏覽器。<a href="{0}" target="_blank">閱讀更多</a>。
 webdav-windows-help=檔案與資料夾能被直接管理從您的桌面作業系統的檔案瀏覽器。在從Windows存取之前，請確認您已經從Microsoft安裝<a href="{0}" target="_blank">更新</a>。<a href="{1}" target="_blank">閱讀更多</a>。
-webhook=Webhook (Automatic Copy)
-webhook-help=Trigger a webhook with a payload. (Automatic Copy)
 week-starts-on=週開始在
 week-view=週檢視
 weekday-short-friday=F
